atualizada folha de estilo do template, template html e na classe adicionados imports relacionados ao router, location, itemservice, método get pelo id para mostra de detalhes do item e método voltar para botão

--- a/angular/angular-lista-de-compras/src/app/detalhe-item/detalhe-item.component.html
+++ b/angular/angular-lista-de-compras/src/app/detalhe-item/detalhe-item.component.html
@@ -8,4 +8,5 @@
             <input [(ngModel)]="item.qtd" placeholder="qtd"/>
         </label>
     </div>
+    <button (click)="voltar()">Voltar</button>
 </div>>
