--- a/angular/angular-lista-de-compras/src/app/app.component.html
+++ b/angular/angular-lista-de-compras/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
+    <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/itens">Itens</a>
 </nav>
-<app-mensagens></app-mensagens>
 <router-outlet></router-outlet>
+<app-mensagens></app-mensagens>
