--- a/angular/angular-lista-de-compras/src/app/app.component.css
+++ b/angular/angular-lista-de-compras/src/app/app.component.css
@@ -19,9 +19,9 @@ h1 {
     color: #334953;
   }
   nav a:hover {
-    color: #039be5;
+    color: #339972;
     background-color: #cfd8dc;
   }
   nav a.active {
-    color: #039be5;
+    color: #339972;
   }
