--- a/angular/angular-lista-de-compras/src/app/mensagens/mensagens.component.html
+++ b/angular/angular-lista-de-compras/src/app/mensagens/mensagens.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="mensagemService.mensagens.length">
 
     <h2>Mensagens</h2>
-    <button class="clear"
+    <button class="limpar"
             (click)="mensagemService.limpar()">Limpar</button>
     <div *ngFor='let mensagem of mensagemService.mensagens'> {{mensagem}} </div>
   
